カスタムカラーの追加＆使用ソフト一覧のスタイル調整

--- a/ystandard-child/style.css
+++ b/ystandard-child/style.css
@@ -37,6 +37,17 @@ table td:nth-of-type(1){
 }
 
 /* ========================================================
+   カラーパレットの追加
+=========================================================*/
+/* 文字色 */
+.has-color1-color {
+	color: #958a8a;
+}
+.has-color2-color {
+	color: 616371;
+}
+
+/* ========================================================
    見出しスタイル
 =========================================================*/
 /* 見出しが見きれないために余白を確保 */
@@ -116,6 +127,9 @@ main h3.wp-block-heading:before {
 =========================================================*/
 .post-type-archive-skills .archive__container.is-card {
   row-gap: 2.5em;
+}
+.post-type-archive-skills .tool__list {
+  list-style-type: none;
 }
 
 .archive__title-row {
